# collaborative-robotic-sanding

mujoco_crs/: DEMO_INSTRUCTIONS.md  MUJOCO_LOG.TXT  README.md  find_reachable_config.py  pyproject.toml  sanding_demo.py  simple_demo.py  test_ik.py  test_robot.py  verify_positions.py  visual_sanding_demo.py
mujoco_crs/docs/: SETUP_GUIDE.md
mujoco_crs/mujoco_crs/: __init__.py  config.py  controller.py  ik.py  run.py  simulation.py  toolpath.py
mujoco_crs/mujoco_crs.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
mujoco_crs/mujoco_crs/assets/: ur10e_sanding.xml
